--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
-aa
-bb
-cc
-dd
-Ce commit n'a été fait ni par Ewen, ni par Bernard, ni par Lilian
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit:no">
+    <link href="bootstrap-5.3.6-dist/css/bootstrap.min.css">
+    <script src="bootstrap-5.3.6-dist/js/bootstrap.bundle.min.js"></script>
+    <title>Page Bootstrap</title>
+</head>
+<body>
+    <div class="container-fluid">
+        <h1>Page de test Bootstrap</h1>
+        <p>Je suis un tutoriel pour apprendre Bootstrap. Ceci est dans un container-fluid.</p>
+    </div>
+
+</body>
+</html>
