--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Page Bootstrap</title>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <h1>Page de test Bootstrap</h1>
-        <p>Je suis un tutoriel pour apprendre Bootstrap. Ceci est dans un container-fluid.</p>
+        <p>Je suis un tutoriel pour apprendre Bootstrap.</p>
     </div>
 
 </body>
