--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit:no">
-    <link href="bootstrap-5.3.6-dist/css/bootstrap.min.css">
+    <link href="bootstrap-5.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap-5.3.6-dist/js/bootstrap.bundle.min.js"></script>
     <title>Page Bootstrap</title>
 </head>
