--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Page Bootstrap</title>
 </head>
 <body>
-    <div class="container pt-5 my-5">
+    <div class="container pt-5 my-5 bg-dark text-white">
         <h1>Page de test Bootstrap</h1>
         <p>Je suis un tutoriel pour apprendre Bootstrap.</p>
     </div>
