--- a/components.html
+++ b/components.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit:no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link href="bootstrap-5.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap-5.3.6-dist/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
-
-    <title>Page Bootstrap</title>
+    <title>Composants Bootstrap utiles</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-dark text-white">
-            <div class="container-fluid py-2 py-lg-0">
-                <a class="navbar-brand ms-3 me-auto" href="#">Logo</a>
+    <!-- Header avec menu offcanvas (apparaît sur la droite de l'écran) -->
+    <header class="bg-dark">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Logo</a>
+
+                <!-- Bouton dérouler le menu burger -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
                 <!-- Offcanvas -->
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -28,34 +32,29 @@
                     
                     <!-- Body offcanvas -->
                     <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="#">Bouton</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Buy</a>
+                                <a class="nav-link" href="#">Fonction</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#">More</a>
+                                <a class="nav-link" href="#">Action</a>
                             </li>
                         </ul>
                     </div>
                 </div>
-
-                <!-- Bouton login faisant apparaître un modal -->
-                <button type="button" class="btn btn-success me-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                    Login
-                </button>
-
-                <!-- Bouton dérouler le menu burger -->
-                <button class="navbar-toggler me-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
             </div>
         </nav>
     </header>
+
+    <!-- Bouton login faisant apparaître un modal -->
+    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+        Login
+    </button>
 
     <!-- Modal -->
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -78,11 +77,12 @@
     </div>
     </div>
 
-    <main>
-        <p>Je suis un texte sous le header</p>
-    </main>
-
-    
-
+    <!-- Barre de recherche -->
+    <form class="d-flex mt-3" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+        <button class="btn border-0" type="submit">
+            <i class="bi bi-search" type></i>
+        </button>
+    </form>
 </body>
 </html>
