--- a/histoire.html
+++ b/histoire.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Histoire</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
+    <section>
+        <h1>Histoire de la Fête des Lumières</h1>
+        <article>
+            <h2>Origines historiques</h2>
+            <p><span>La Fête des Lumières</span> se déroule le 8 décembre par rapport à un pélerinage de Fourvière à Lyon.<br>En effet, en 1168, la première église dédiée à la Vierge est construite à Fourvière. Les guerres de religions (entre les catholiques et les protestants au XVIe siècle) a ravagé cette église.<br>Elle a été reconstruite et a été un lieu de prière en vue de soigner des maladies.<br>Face aux grandes épidémies de peste, un pélerinage a eu lieu le 8 septembre 1643 afin de prier la Vierge Marie et lui demander de protéger la ville de Lyon, proie de la peste.<br></p>
+            <h2>Mais pourquoi le 8 décembre ?</h2>
+            <p>Le 8 septembre 1852, une statue sculptée par Joseph-Hugues Fabisch dût être inaugurée. Celui-ci avait gagné un concours de sculpture organisé par les autorités religieuses, qui souhaitaient un monument religieux sur la colline de Fourvière.<br>À cause des conditions météorologiques, l'inauguration (qui devait être faite avec des bougies) a été repoussée au 8 décembre 1852. Ce même jour, les habitants sortirent avec leurs bougies pour éclairer la ville.<br>Depuis 1989, cette Fête des Lumières prend les proportions qu'on connaît aujourd'hui. Les monuments importants sont recouverts de lumières et sont la scène de magnifiques spectacles lumineux.</p>
+        </article>
     
+    
+    </section>
+
 </body>
 </html>
