--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 </head>
 <body>
     <header>
-        
+        <nav>
+            <ul>
+                <li><a href="histoire.html">Histoire</a></li>
+                <li><a href="deroulement.html">Déroulement</a></li>
+                <li><a href="actualite.html">Déroulement</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <p>Je suis un texte sous le header</p>
+        <section>
+            
+        </section>
     </main>
 
     <footer>
