Peuplement HTML histoire

--- a/histoire.html
+++ b/histoire.html
@@ -13,12 +13,17 @@
         <article>
             <h2>Origines historiques</h2>
             <p><span>La Fête des Lumières</span> se déroule le 8 décembre par rapport à un pélerinage de Fourvière à Lyon.<br>En effet, en 1168, la première église dédiée à la Vierge est construite à Fourvière. Les guerres de religions (entre les catholiques et les protestants au XVIe siècle) a ravagé cette église.<br>Elle a été reconstruite et a été un lieu de prière en vue de soigner des maladies.<br>Face aux grandes épidémies de peste, un pélerinage a eu lieu le 8 septembre 1643 afin de prier la Vierge Marie et lui demander de protéger la ville de Lyon, proie de la peste.<br></p>
+            <iframe src="https://www.google.fr/maps/place/Basilique+Notre-Dame+de+Fourvi%C3%A8re/@45.7622698,4.8200631,17z/data=!3m1!4b1!4m6!3m5!1s0x47f4eba97571522b:0x9d1bcc791b678e29!8m2!3d45.7622698!4d4.822638!16zL20vMGMybGZk?entry=ttu&g_ep=EgoyMDI1MDUyMS4wIKXMDSoJLDEwMjExNDUzSAFQAw%3D%3D" title="carte_basilique_fourviere"></iframe>
+        </article>
+        <article>
             <h2>Mais pourquoi le 8 décembre ?</h2>
             <p>Le 8 septembre 1852, une statue sculptée par Joseph-Hugues Fabisch dût être inaugurée. Celui-ci avait gagné un concours de sculpture organisé par les autorités religieuses, qui souhaitaient un monument religieux sur la colline de Fourvière.<br>À cause des conditions météorologiques, l'inauguration (qui devait être faite avec des bougies) a été repoussée au 8 décembre 1852. Ce même jour, les habitants sortirent avec leurs bougies pour éclairer la ville.<br>Depuis 1989, cette Fête des Lumières prend les proportions qu'on connaît aujourd'hui. Les monuments importants sont recouverts de lumières et sont la scène de magnifiques spectacles lumineux.</p>
         </article>
-    
-    
+        <form action="deroulement.html">
+            <input type="submit" value="Déroulement Fête 2025"/>
+        </form>
     </section>
+
 
 </body>
 </html>
