--- a/actualite.html
+++ b/actualite.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </head>
 <body>
+    <h1>Actualités</h1>
     <div class="container_grid">
         <div class="card" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
