--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
     </header>
 
     <main>
+        <h1>Histoire de la Fête</h1>
         <article>
-            <h2>Histoire</h2>
+            <h2>Titre premier article sur les origines</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi voluptate doloribus asperiores unde vel fugit tempora explicabo temporibus? Officiis, fugit reiciendis sed quasi laborum sapiente perspiciatis architecto in ipsum asperiores dolore illo eum repellat dolorum, odio inventore molestiae quod consectetur harum suscipit exercitationem porro. Asperiores consequatur, nulla quisquam rem exercitationem error eos sint numquam doloremque quis dignissimos neque rerum, itaque tempore sed voluptatum qui earum! Autem, ipsam sed? Asperiores, dolor molestias. Iste, excepturi magni. Quisquam repudiandae in pariatur labore vero. Obcaecati hic velit quas fugiat non quia nobis natus et, accusantium veniam eos tempore vitae neque iure quos nesciunt quibusdam voluptatum facere ducimus. Ipsa voluptates, saepe vel commodi, a aspernatur facilis quasi delectus enim ipsum atque, quisquam nisi. Ducimus iusto amet odio! Ratione libero asperiores, sapiente laborum rerum repudiandae ea aperiam suscipit, eius, illo at. Labore accusantium iusto blanditiis qui porro quasi omnis, explicabo praesentium officia dolor esse, placeat dignissimos.
             </p>
+        </article>
+
+        <article>
+
         </article>
     </main>
 
