--- a/histoire.html
+++ b/histoire.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Histoire</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 
 </head>
+
 <body>
     <section>
         <h1>Histoire de la Fête des Lumières</h1>
         <article>
             <h2>Origines historiques</h2>
             <p><span>La Fête des Lumières</span> se déroule le 8 décembre par rapport à un pélerinage de Fourvière à Lyon.<br>En effet, en 1168, la première église dédiée à la Vierge est construite à Fourvière. Les guerres de religions (entre les catholiques et les protestants au XVIe siècle) a ravagé cette église.<br>Elle a été reconstruite et a été un lieu de prière en vue de soigner des maladies.<br>Face aux grandes épidémies de peste, un pélerinage a eu lieu le 8 septembre 1643 afin de prier la Vierge Marie et lui demander de protéger la ville de Lyon, proie de la peste.<br></p>
-            <iframe src="https://www.google.fr/maps/place/Basilique+Notre-Dame+de+Fourvi%C3%A8re/@45.7622698,4.8200631,17z/data=!3m1!4b1!4m6!3m5!1s0x47f4eba97571522b:0x9d1bcc791b678e29!8m2!3d45.7622698!4d4.822638!16zL20vMGMybGZk?entry=ttu&g_ep=EgoyMDI1MDUyMS4wIKXMDSoJLDEwMjExNDUzSAFQAw%3D%3D" title="carte_basilique_fourviere"></iframe>
+            <iframe width="400" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=8%20Pl.%20de%20Fourvi%C3%A8re,%2069005%20Lyon+(Basilique%20Fourvi%C3%A8re)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/collections/personal-trackers/">Personal GPS</a></iframe>       
         </article>
         <article>
             <h2>Mais pourquoi le 8 décembre ?</h2>
