--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <nav>
             <ul>
+                <li><a href="histoire.html">Histoire</a></li>
                 <li><a href="deroulement.html">Déroulement</a></li>
                 <li><a href="actualite.html">Actualité</a></li>
             </ul>
@@ -22,13 +23,38 @@
         <h1>Histoire de la Fête</h1>
         <article>
             <h2>Titre premier article sur les origines</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi voluptate doloribus asperiores unde vel fugit tempora explicabo temporibus? Officiis, fugit reiciendis sed quasi laborum sapiente perspiciatis architecto in ipsum asperiores dolore illo eum repellat dolorum, odio inventore molestiae quod consectetur harum suscipit exercitationem porro. Asperiores consequatur, nulla quisquam rem exercitationem error eos sint numquam doloremque quis dignissimos neque rerum, itaque tempore sed voluptatum qui earum! Autem, ipsam sed? Asperiores, dolor molestias. Iste, excepturi magni. Quisquam repudiandae in pariatur labore vero. Obcaecati hic velit quas fugiat non quia nobis natus et, accusantium veniam eos tempore vitae neque iure quos nesciunt quibusdam voluptatum facere ducimus. Ipsa voluptates, saepe vel commodi, a aspernatur facilis quasi delectus enim ipsum atque, quisquam nisi. Ducimus iusto amet odio! Ratione libero asperiores, sapiente laborum rerum repudiandae ea aperiam suscipit, eius, illo at. Labore accusantium iusto blanditiis qui porro quasi omnis, explicabo praesentium officia dolor esse, placeat dignissimos.
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi voluptate doloribus asperiores unde vel fugit tempora explicabo temporibus? Officiis, fugit reiciendis sed quasi laborum sapiente perspiciatis architecto in ipsum asperiores dolore illo eum repellat dolorum, odio inventore molestiae quod consectetur harum suscipit exercitationem porro. Asperiores consequatur, nulla quisquam rem exercitationem error eos sint numquam doloremque quis dignissimos neque rerum, itaque tempore sed voluptatum qui earum! Autem, ipsam sed? Asperiores, dolor molestias. Iste, excepturi magni. Quisquam repudiandae in pariatur labore vero. Obcaecati hic velit quas fugiat non quia nobis natus et, accusantium veniam eos tempore vitae neque iure quos nesciunt quibusdam voluptatum facere ducimus. Ipsa voluptates, saepe vel commodi, a aspernatur facilis quasi delectus enim ipsum atque, quisquam nisi. Ducimus iusto amet odio! Ratione libero asperiores, sapiente laborum rerum repudiandae ea aperiam suscipit, eius, illo at. Labore accusantium iusto blanditiis qui porro quasi omnis, explicabo praesentium officia dolor esse, placeat dignissimos.
             </p>
         </article>
 
         <article>
-
+            <button>
+                <a href="deroulement.html">Découvrir l'évènement</a>
+            </button>
         </article>
+
+        <article>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ratione accusantium a exercitationem nisi, totam fuga, cumque, accusamus nobis molestiae quaerat? Placeat itaque, asperiores voluptatum nemo dignissimos laborum! Sint voluptate praesentium distinctio delectus incidunt quaerat nostrum, quod sed eius tempora temporibus. Eaque repellat, fugit eos corporis officiis voluptatum id esse odit rerum officia soluta quod, autem eligendi recusandae minus eveniet adipisci a vero harum laborum omnis consequuntur ipsum error. Magni eius est, explicabo ullam mollitia velit natus dolores alias dolorum enim, excepturi nulla expedita minima aperiam, omnis molestias laborum molestiae accusamus illo praesentium amet? Eveniet hic mollitia aliquid voluptate illum. Non distinctio illo praesentium reprehenderit magni ad necessitatibus pariatur? Totam at praesentium atque hic ut a, ratione beatae placeat dolorem esse perspiciatis nisi magnam, velit sunt, exercitationem id error eos! Ex iure quas dolorem accusamus quasi, inventore minima, assumenda nostrum nulla aliquam, hic consequatur animi a qui fuga praesentium quod.</p>
+        </article>
+
+        <section>
+            <h2>Actualités Principales</h2>
+            <article>
+                <h3>Première actu</h3>
+                <img src="" alt="" title="">
+            </article>
+            
+            <article>
+                <h3>Seconde actu</h3>
+                <img src="" alt="" title="">
+            </article>
+            
+            <article>
+                <h3>Troisième actu</h3>
+                <img src="" alt="" title="">
+            </article>
+        </section>
     </main>
 
     <footer>
