--- a/deroulement.html
+++ b/deroulement.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <header>
+        <a href="index.html"><img src="" alt="logo" title="logo"></a>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>
+                <li><a href="histoire.html">Histoire</a></li>
+                <li><a href="deroulement.html">Déroulement</a></li>
                 <li><a href="actualite.html">Actualité</a></li>
             </ul>
         </nav>
