--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <a href="index.html"><img src="" alt="logo" title="logo"></a>
         <nav>
             <ul>
                 <li><a href="histoire.html">Histoire</a></li>
