--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="" alt="logo" title="logo"></a>
+        <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
         <nav>
             <ul>
                 <li><a href="histoire.html">Histoire</a></li>
@@ -59,7 +59,10 @@
     </main>
 
     <footer>
-
+        <p>&copy; 2024 Fête des Lumières de Lyon. Tous droits réservés.</p>
+        <p>
+            <a href="https://www.lyon.fr/" target="_blank">Site officiel de la ville de Lyon</a>
+        </p>
     </footer>
 </body>
 </html>
