--- a/actualite.html
+++ b/actualite.html
@@ -9,40 +9,83 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Actualités</h1>
-    <div class="container_grid">
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Actu1</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-              <a href="#" class="btn btn-primary">En savoir plus</a>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-dark text-white">
+            <div class="container-fluid py-2 py-lg-0">
+                <a class="navbar-brand ms-3 me-auto" href="index.html">Logo</a>
+
+                <!-- Offcanvas -->
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                    <!-- Header offcanvas -->
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    
+                    <!-- Body offcanvas -->
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Buy</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">More</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Bouton login faisant apparaître un modal -->
+                <button type="button" class="btn btn-success me-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                    Login
+                </button>
+
+                <!-- Bouton dérouler le menu burger -->
+                <button class="navbar-toggler me-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
             </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Actu2</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-              <a href="#" class="btn btn-primary">En savoir plus</a>
-            </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Actu3</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-              <a href="#" class="btn btn-primary">En savoir plus</a>
-            </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Actu4</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-              <a href="#" class="btn btn-primary">En savoir plus</a>
-            </div>
-          </div>
-    </div>
+            
+        </nav>
+    </header>
+    <section>
+        <main>
+        <h1>Actualités</h1>
+        <div class="container_grid">
+            <div class="card" style="width: 25rem;">
+                <a href="actu1.html"><img src="images/actu1.jpg" class="card-img-top" alt="image_actu1"></a>
+                <div class="card-body">
+                    <h5>Actu1</h5><hr/>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                </div>
+              </div>
+              <div class="card" style="width: 25rem;">
+                <a href="actu2.html"><img src="images/actu2.jpg" class="card-img-top" alt="image_actu2"></a>
+                <div class="card-body">
+                    <h5>Actu2</h5><hr/>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                </div>
+              </div>
+              <div class="card" style="width: 25rem;">
+                <a href="actu3.html"><img src="images/actu3.jpg" class="card-img-top" alt="image_actu3"></a>
+                <div class="card-body">
+                    <h5>Actu3</h5><hr/>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                </div>
+              </div>
+              <div class="card" style="width: 25rem;">
+                <a href="actu4.html"><img src="images/actu4.jpg" class="card-img-top" alt="image_actu4"></a>
+                <div class="card-body">
+                    <h5>Actu4</h5><hr/>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                </div>
+              </div>
+        </div>
+    </main>
 </body>
 </html>
