--- a/histoire.html
+++ b/histoire.html
@@ -11,22 +11,67 @@
 </head>
 
 <body>
-    <section>
-        <h1>Histoire de la Fête des Lumières</h1>
-        <article>
-            <h2>Origines historiques</h2>
-            <p><span>La Fête des Lumières</span> se déroule le 8 décembre par rapport à un pélerinage de Fourvière à Lyon.<br>En effet, en 1168, la première église dédiée à la Vierge est construite à Fourvière. Les guerres de religions (entre les catholiques et les protestants au XVIe siècle) a ravagé cette église.<br>Elle a été reconstruite et a été un lieu de prière en vue de soigner des maladies.<br>Face aux grandes épidémies de peste, un pélerinage a eu lieu le 8 septembre 1643 afin de prier la Vierge Marie et lui demander de protéger la ville de Lyon, proie de la peste.<br></p>
-            <iframe width="400" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=8%20Pl.%20de%20Fourvi%C3%A8re,%2069005%20Lyon+(Basilique%20Fourvi%C3%A8re)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/collections/personal-trackers/">Personal GPS</a></iframe>       
-        </article>
-        <article>
-            <h2>Mais pourquoi le 8 décembre ?</h2>
-            <p>Le 8 septembre 1852, une statue sculptée par Joseph-Hugues Fabisch dût être inaugurée. Celui-ci avait gagné un concours de sculpture organisé par les autorités religieuses, qui souhaitaient un monument religieux sur la colline de Fourvière.<br>À cause des conditions météorologiques, l'inauguration (qui devait être faite avec des bougies) a été repoussée au 8 décembre 1852. Ce même jour, les habitants sortirent avec leurs bougies pour éclairer la ville.<br>Depuis 1989, cette Fête des Lumières prend les proportions qu'on connaît aujourd'hui. Les monuments importants sont recouverts de lumières et sont la scène de magnifiques spectacles lumineux.</p>
-        </article>
-        <form action="deroulement.html">
-            <input type="submit" value="Déroulement Fête 2025"/>
-        </form>
-    </section>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-dark text-white">
+            <div class="container-fluid py-2 py-lg-0">
+                <a class="navbar-brand ms-3 me-auto" href="#">Logo</a>
 
+                <!-- Offcanvas -->
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                    <!-- Header offcanvas -->
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    
+                    <!-- Body offcanvas -->
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
 
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Buy</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">More</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Bouton login faisant apparaître un modal -->
+                <button type="button" class="btn btn-success me-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                    Login
+                </button>
+
+                <!-- Bouton dérouler le menu burger -->
+                <button class="navbar-toggler me-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h1>Histoire de la Fête des Lumières</h1>
+            <article>
+                <h2>Origines historiques</h2>
+                <p><span>La Fête des Lumières</span> se déroule le 8 décembre par rapport à un pélerinage de Fourvière à Lyon.<br>En effet, en 1168, la première église dédiée à la Vierge est construite à Fourvière. Les guerres de religions (entre les catholiques et les protestants au XVIe siècle) a ravagé cette église.<br>Elle a été reconstruite et a été un lieu de prière en vue de soigner des maladies.<br>Face aux grandes épidémies de peste, un pélerinage a eu lieu le 8 septembre 1643 afin de prier la Vierge Marie et lui demander de protéger la ville de Lyon, proie de la peste.<br></p>
+                <iframe width="400" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=8%20Pl.%20de%20Fourvi%C3%A8re,%2069005%20Lyon+(Basilique%20Fourvi%C3%A8re)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/collections/personal-trackers/">Personal GPS</a></iframe>       
+            </article>
+            <article>
+                <h2>Mais pourquoi le 8 décembre ?</h2>
+                <p>Le 8 septembre 1852, une statue sculptée par Joseph-Hugues Fabisch dût être inaugurée. Celui-ci avait gagné un concours de sculpture organisé par les autorités religieuses, qui souhaitaient un monument religieux sur la colline de Fourvière.<br>À cause des conditions météorologiques, l'inauguration (qui devait être faite avec des bougies) a été repoussée au 8 décembre 1852. Ce même jour, les habitants sortirent avec leurs bougies pour éclairer la ville.<br>Depuis 1989, cette Fête des Lumières prend les proportions qu'on connaît aujourd'hui. Les monuments importants sont recouverts de lumières et sont la scène de magnifiques spectacles lumineux.</p>
+            </article>
+            <form action="deroulement.html">
+                <input type="submit" value="Déroulement Fête 2025"/>
+            </form>
+        </section>
+
+    </main>
 </body>
 </html>
