--- a/actualite.html
+++ b/actualite.html
@@ -81,8 +81,8 @@
               <div class="card" style="width: 25rem;">
                 <a href="actu4.html"><img src="images/actu4.jpg" class="card-img-top" alt="image_actu4"></a>
                 <div class="card-body">
-                    <h5>Actu4</h5><hr/>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    <h5><strong>Lyon. La Fête des Lumières 2025 prend un revers, la Métropole lui coupe le robinet</strong></h5><hr/>
+                  <p class="card-text">La Fête des Lumières 2025 paie le prix des coupes budgétaires de la Métropole de Lyon dans le secteur de la culture. La subvention de 80 000 euros, accordée en 2024, est supprimée.</p>
                 </div>
               </div>
         </div>
