--- a/index.html
+++ b/index.html
@@ -23,37 +23,52 @@
     <main>
         <h1>Histoire de la Fête</h1>
         <article>
-            <h2>Titre premier article sur les origines</h2>
+            <h2>Les origines de la Fête des Lumières</h2>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi voluptate doloribus asperiores unde vel fugit tempora explicabo temporibus? Officiis, fugit reiciendis sed quasi laborum sapiente perspiciatis architecto in ipsum asperiores dolore illo eum repellat dolorum, odio inventore molestiae quod consectetur harum suscipit exercitationem porro. Asperiores consequatur, nulla quisquam rem exercitationem error eos sint numquam doloremque quis dignissimos neque rerum, itaque tempore sed voluptatum qui earum! Autem, ipsam sed? Asperiores, dolor molestias. Iste, excepturi magni. Quisquam repudiandae in pariatur labore vero. Obcaecati hic velit quas fugiat non quia nobis natus et, accusantium veniam eos tempore vitae neque iure quos nesciunt quibusdam voluptatum facere ducimus. Ipsa voluptates, saepe vel commodi, a aspernatur facilis quasi delectus enim ipsum atque, quisquam nisi. Ducimus iusto amet odio! Ratione libero asperiores, sapiente laborum rerum repudiandae ea aperiam suscipit, eius, illo at. Labore accusantium iusto blanditiis qui porro quasi omnis, explicabo praesentium officia dolor esse, placeat dignissimos.
+                La Fête des Lumières trouve ses racines au XIX<sup>e</sup> siècle, lorsque les Lyonnais ont illuminé leurs fenêtres de bougies pour célébrer la Vierge Marie, protectrice de la ville. Depuis, chaque année autour du 8 décembre, Lyon se pare de milliers de lumières et accueille des artistes du monde entier pour transformer la ville en un véritable théâtre à ciel ouvert.
             </p>
         </article>
 
         <article>
             <button>
-                <a href="deroulement.html">Découvrir l'évènement</a>
+                <a href="deroulement.html">Découvrir le programme 2025</a>
             </button>
+            <p>
+                Consultez le déroulement complet de l'événement, les lieux incontournables et les conseils pratiques pour profiter pleinement de la Fête des Lumières.
+            </p>
         </article>
 
         <article>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ratione accusantium a exercitationem nisi, totam fuga, cumque, accusamus nobis molestiae quaerat? Placeat itaque, asperiores voluptatum nemo dignissimos laborum! Sint voluptate praesentium distinctio delectus incidunt quaerat nostrum, quod sed eius tempora temporibus. Eaque repellat, fugit eos corporis officiis voluptatum id esse odit rerum officia soluta quod, autem eligendi recusandae minus eveniet adipisci a vero harum laborum omnis consequuntur ipsum error. Magni eius est, explicabo ullam mollitia velit natus dolores alias dolorum enim, excepturi nulla expedita minima aperiam, omnis molestias laborum molestiae accusamus illo praesentium amet? Eveniet hic mollitia aliquid voluptate illum. Non distinctio illo praesentium reprehenderit magni ad necessitatibus pariatur? Totam at praesentium atque hic ut a, ratione beatae placeat dolorem esse perspiciatis nisi magnam, velit sunt, exercitationem id error eos! Ex iure quas dolorem accusamus quasi, inventore minima, assumenda nostrum nulla aliquam, hic consequatur animi a qui fuga praesentium quod.</p>
+            <h2>Une tradition devenue événement international</h2>
+            <p>
+                Au fil des années, la Fête des Lumières est devenue un rendez-vous culturel majeur, attirant chaque année des millions de visiteurs. Les installations lumineuses, les spectacles et les animations investissent les places, les monuments et les berges du Rhône, offrant une expérience unique et féérique à tous les publics.
+            </p>
         </article>
 
         <section>
             <h2>Actualités Principales</h2>
             <article>
-                <h3>Première actu</h3>
-                <img src="" alt="" title="">
+                <h3>Le parcours 2025 dévoilé</h3>
+                <img src="images/parcours2025.jpg" alt="Parcours 2025" title="Parcours de la Fête des Lumières 2025">
+                <p>
+                    Découvrez les nouveaux sites illuminés et les œuvres inédites qui seront présentées lors de l'édition 2025. Un parcours repensé pour surprendre petits et grands !
+                </p>
             </article>
             
             <article>
-                <h3>Seconde actu</h3>
-                <img src="" alt="" title="">
+                <h3>Appel à bénévoles</h3>
+                <img src="images/benevoles.jpg" alt="Bénévoles Fête des Lumières" title="Appel à bénévoles">
+                <p>
+                    Participez à l'organisation de la Fête des Lumières ! Les inscriptions pour devenir bénévole sont ouvertes. Rejoignez une équipe dynamique et vivez l'événement de l'intérieur.
+                </p>
             </article>
             
             <article>
-                <h3>Troisième actu</h3>
-                <img src="" alt="" title="">
+                <h3>Retour sur l'édition 2024</h3>
+                <img src="images/edition2024.jpg" alt="Edition 2024" title="Retour sur l'édition 2024">
+                <p>
+                    Revivez les moments forts de l'édition précédente en images et vidéos : installations marquantes, ambiance festive et témoignages des visiteurs.
+                </p>
             </article>
         </section>
     </main>
