Contenu mis dans actualités

--- a/actualite.html
+++ b/actualite.html
@@ -58,28 +58,30 @@
         <h1>Actualités</h1>
         <div class="container_grid">
             <div class="card" style="width: 25rem;">
-                <a href="actu1.html"><img src="images/actu1.jpg" class="card-img-top" alt="image_actu1"></a>
+                <a href="https://7alyon.com/fete-des-lumieres-2025-lyon-dates-horairex-programmation/"><img src="images/actu1.jpg" class="card-img-top" alt="image_actu1"></a>
                 <div class="card-body">
-                    <h5>Actu1</h5><hr/>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    <h5>Quelles dates cette année ?</h5><hr/>
+                  <p class="card-text">Fête des Lumières 2025 à Lyon : dates, horaires et programmation </p>
                 </div>
               </div>
               <div class="card" style="width: 25rem;">
                 <a href="actu2.html"><img src="images/actu2.jpg" class="card-img-top" alt="image_actu2"></a>
                 <div class="card-body">
-                    <h5>Actu2</h5><hr/>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    <h5>Fête des Lumières. Combien a coûté la déchetterie du Parc de la Tête d’or ?</h5><hr/>
+                  <p class="card-text">La fête des lumières a refermé ses portes sur fond de polémique et de dégout face à la profusion d’œuvres politisées, totalement déconnectées de l’esprit du 8 décembre.
+
+                  </p>
                 </div>
               </div>
               <div class="card" style="width: 25rem;">
-                <a href="actu3.html"><img src="images/actu3.jpg" class="card-img-top" alt="image_actu3"></a>
+                <a href="https://www.lyon.fr/actualite/appels-projet/fete-des-lumieres-2025-lumignons-du-coeur"><img src="images/actu3.jpg" class="card-img-top" alt="image_actu3"></a>
                 <div class="card-body">
-                    <h5>Actu3</h5><hr/>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    <h5>Fête des Lumières 2025 : Lumignons du Cœur</h5><hr/>
+                  <p class="card-text">Vous êtes une association caritative ? Déposez votre candidature pour bénéficier de l'opération des Lumignons du Cœur !</p>
                 </div>
               </div>
               <div class="card" style="width: 25rem;">
-                <a href="actu4.html"><img src="images/actu4.jpg" class="card-img-top" alt="image_actu4"></a>
+                <a href="https://actu.fr/auvergne-rhone-alpes/lyon_69123/lyon-la-fete-des-lumieres-2025-prend-un-revers-de-la-metropole-qui-coupe-le-robinet_62376138.html"><img src="images/actu4.jpg" class="card-img-top" alt="image_actu4"></a>
                 <div class="card-body">
                     <h5><strong>Lyon. La Fête des Lumières 2025 prend un revers, la Métropole lui coupe le robinet</strong></h5><hr/>
                   <p class="card-text">La Fête des Lumières 2025 paie le prix des coupes budgétaires de la Métropole de Lyon dans le secteur de la culture. La subvention de 80 000 euros, accordée en 2024, est supprimée.</p>
