--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
     <header>
         <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
         <nav>
-            <ul>
-                <li><a href="histoire.html">Histoire</a></li>
-                <li><a href="deroulement.html">Déroulement</a></li>
-                <li><a href="actualite.html">Actualité</a></li>
-            </ul>
+            <button><a href="histoire.html">Histoire</a></button>
+            <button><a href="deroulement.html">Déroulement</a></button>
+            <button><a href="actualite.html">Actualité</a></button>
         </nav>
     </header>
 
@@ -74,7 +72,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Fête des Lumières de Lyon. Tous droits réservés.</p>
+        <p>&copy; 2025 Fête des Lumières de Lyon. Tous droits réservés.</p>
         <p>
             <a href="https://www.lyon.fr/" target="_blank">Site officiel de la ville de Lyon</a>
         </p>
