changement button -> input header nav

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
         <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
         <nav>
-            <button><a href="histoire.html">Histoire</a></button>
-            <button><a href="deroulement.html">Déroulement</a></button>
-            <button><a href="actualite.html">Actualité</a></button>
+            <form action="histoire.html"><input type="submit" value="Histoire"></form>
+            <form action="deroulement.html.html"><input type="submit" value="Déroulement"></form>
+            <form action="actualite.html"><input type="submit" value="Actualité"></form>
         </nav>
     </header>
 
