--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
         </article>
 
         <article>
-            <button>
-                <a href="deroulement.html">Découvrir le programme 2025</a>
-            </button>
+            <form action="deroulement.html"><input type="submit" value="Découvrir le programme 2025"></form>
+
             <p>
                 Consultez le déroulement complet de l'événement, les lieux incontournables et les conseils pratiques pour profiter pleinement de la Fête des Lumières.
             </p>
